--- a/signup.css
+++ b/signup.css
@@ -62,7 +62,7 @@ body{
     .signup{
         position: absolute;
         width: 802px;
-        height: 411px;
+        height: 500px;
         left: 400px;
         top: 250px;
         
@@ -91,12 +91,13 @@ position: absolute;
     background-color: 
     #228B22;
     color: white;
-    left: 100px;
+    left: 0px;
     border-radius: 5px;
     font-size: 15px;
     font-family: sans-serif;
     font-weight: 600;
     border: none;
+    top: 300px;
 }
 
 span{
@@ -105,11 +106,12 @@ span{
 }
 
 .signin{
+    
       position: absolute; 
     height: 30px;
     width: 80px;
     background-color: #228B22;
-    bottom: 20px;
+    bottom: 55px;
     left: 370px;
     border-radius: 5px;
 }
@@ -119,7 +121,7 @@ font-size: 15px;
 font-family: sans-serif;
 font-family: sans-serif;
 font-weight: 600;
-
+margin-top: 30px;
 
 }
 .s{
