--- a/about.css
+++ b/about.css
@@ -1,5 +1,4 @@
 
-
 :root{
     --color-1:#228B22;
     
@@ -24,7 +23,7 @@
   .contain{
       max-width: 1170px;
       margin: auto;
-     
+    margin-top: 0px; 
     
   }
 
@@ -47,16 +46,19 @@
   }
   .header .logo,
   .header .nav{
-      padding:0 15px;
+      padding:0px 15px;
+      
   }
   .header .logo a{
+    
       font-size: 30px;
       color: white;
       text-transform: capitalize;
+     
   }
   .header .nav ul li{
       display: inline-block;
-      margin-left: 40px;
+      margin-left: 60px;
   }
   .header .nav ul li a{
       display: block;
@@ -100,7 +102,7 @@
      width: 100%;
      height: 100%;
      background-color: var(--color-1);
-     left:0;
+     left:0px;
   }
   .nav-toggler span::before{
       top: -6px;
@@ -109,15 +111,15 @@
       top: 6px;
   }
   @media(max-width: 991px){
+    
       .nav-toggler{
           display: flex;
       }
-      .hello{
-        font-size: 10px;
-      }
-      .name1{
-
-        font-size: 10px;
+      .header .logo a{
+        margin-left: -130px;
+          font-size: 30px;
+          color: white;
+          text-transform: capitalize;
       }
       .nav{
         z-index: 1;
@@ -159,7 +161,8 @@
   }
 
 
-  *{
+
+*{
 
     margin: 0;
     padding: 0;
@@ -171,118 +174,256 @@ padding-top: 10px;
     text-align: center;
   
 }
-.card_body{
-    
-    margin-top: -30px;
-}
 .container{
     width: 90%;
-   
+    margin: 40px auto;
 }
-.head{
-    padding-top: 20px;
-   margin-left: 70px;
-    color: white;
-    font-size: 30px;
-    font-weight: 700;
+.cardss{
+    display: flex;
+    flex-direction: column;
+    width: 46%;
+    background-color:white;
+    border-radius: 1px solid #ccc;
+    margin-bottom: 30px;
+    margin-top: 0px;
+    transition: 0.3s; 
+    border-radius: 20px;  
+}
+.readme{
+    color: black;
+    font-size: 15px;
+    font-weight: 600;
+    font-family: sans-serif;
 }
 .card{
-width: 40%;
-background-color:white;
-border-radius: 1px solid #ccc;
-margin-bottom: 10px;
-margin-top: 5px;
+width: 46%;
+background-color:black;
+margin-bottom: 30px;
+margin-top: 0px;
 transition: 0.3s;
-border-radius: 10px;
-
 }
 .header_cards{
-    border-radius: 10px;
 font-size: 15px;
 text-align: center;
-background-color: white;
-padding: 50px 10px;
+color: #228B22;
+padding: 10px 70px;
+font-family: sans-serif;
 
 }
+
+.header_cards h1{
+    font-size: 20px;
+    font-family: sans-serif;
+    margin-top: -20px;
+
+}
+ .header_card h1{
+    color: #228B22;
+    margin-top: -90px;
+    margin-left: 30px;
+
+}
+.card_bod{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.compentance{
+    background-color: #228B22;
+    color: white;
+    width: 30%;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 20px 10px;
+    margin-left: -10px;
+    margin-bottom: 20px;
+}
+
+.header_cards h4{
+    font-size: 15px;
+    font-family: sans-serif;
+    margin-top: -20px;
+    font-weight: 800;
+}
 .card{
+border-radius: 20px;
+    padding: 30px 20px;
+   
     font-size: 15px;
     
-}
-.card img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    background-size: cover;
-    border-radius: 10px;
 } 
+.cardss{
+
+    padding: 30px 20px;
+   
+    font-size: 15px;
+    
+}.card_body{
+    margin-left: 30px;
+} 
+.card_body label{
+    font-weight: 600;
+    font-size: 15px;
+    color: white;
+    
+}
+.header_cards h1{
+    font-weight: 900;
+    font-size: 25px;
+    margin-left: 0px;
+}
 .card_body .btn{
     text-decoration: none;
     font-size: 13px;
     width: 30%;
-    background-color:#228B22;
+    background-color: red;
     padding: 10px 10px;
     display: block;
   text-align: center;
   padding: 10px 5px;
   color: white;
   margin-bottom: 50px;
-  border-radius: 10px;
-  margin-left: 120px;
 }
-.header_cards .my{
-font-size: 20px;
-font-weight:600 ;
-color: #000000;
 
-}
-.header_cards h1{
-    font-size: 39px;
-    font-weight:600 ;
-    color: #228B22;
-    
-    }
-    .header_cards .software{
-margin-bottom: 0px;
-        font-size: large;
-        font-weight: 600;
-    }
-    .card_body p{
-margin-left: 10px;
-font-size: 15px;
-font-weight: 700;
-
-    }
-    .card_body .fa-cloud-download{
-        font-size: 25px;
-    }
-    .card_body .downloadbtn{
-        margin-bottom: -40px;
-        font-size: 20px;
-        font-weight: 700;
-        color: #228B22;
-    }
-    .card_body .know{
-        margin-bottom: 10px;
-        font-weight: 700;
-    }
-.card:hover{
-
-    transform: scale(1);
-    box-shadow: 0 0 40px -10px rgb(103, 16, 16);
-}
 .row{
     display: flex;
     justify-content: space-around;
     flex-flow: wrap;
 }
+.skills p{
+    color:black;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-weight: 800;
+}
+.card_body div img{
+    border-radius: 20px;
+    width: 90%;
+    margin-left: 0px;
+    height: 500px;
+}
+.skills span{
+    color: #228B22;
+    font-size: 20px;
+}
+.skills  .a{
+    margin-left: 0px;
+}
+ .skills{
+    
+    padding: 20px 60px;
+    margin-bottom: -20px;
+    
+}
+.skills p{
+    color: white;
+
+    
+}
+.card_bo{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+} 
+
+@media screen and (max-width:1000px) {
+    .card{
+        width: 50%;
+    }
+    .cardss{
+        width: 50%;
+    }
+ .skills{
+display: flex;
+flex-direction: column;
+ }  
+   
+}
+@media screen and (max-width:805px) {
+   .compentanc{
+    font-size: 15px;
+    margin-bottom: 20px;
+    width: 100%;
+    font-weight: 600;
+    border-radius: 5px;
+   
+    
+   }
+   .skills {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+   
+     }  
+       
+   .header_cards h4{
+margin-left: -30px;
+   }
+   .compentance{
+    border-radius: 5px;
+    font-size: 15px;
+    margin-bottom: 20px;
+    width: 100%;
+   
+    
+   }
+   .card_bod{
+   display: grid;
+   }
+}
+
+@media screen and (max-width:620px) {
+    .card{
+        width: 80%;
+    }
+    .cardss{
+        width: 80%;
+    }
+    .skills{
+        display: flex;
+        flex-direction: column;
+        width: 300%;
+         }  
+           
+    .header .logo a{
+        font-weight:700 ;
+        margin-left: -30px;
+          font-size: 25px;
+          color: white;
+          text-transform: capitalize;
+      }
+    .container{
+
+    width:100%;
+    }
+    
+
+}
+@media screen and (max-width:620px) {
+    .line{
+        width: 90%;
+    }
+    
+   
+}
+
+   
+
 .footer{
-    width: 110%;
+    width: 100%;
+ margin-right: 2000px;
+ } 
+
+.footer{
+    width: 99%;
     background-color: #228B22;
-    padding: 65px 10px;
+    padding: 20px 50px;
     margin-left: 8px;
     margin-right: 0px;
     background-size: cover;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
 }
 .line{
     background-color: #000000;
@@ -290,52 +431,20 @@ font-weight: 700;
     padding: 1PX 1PX;
 }
 .socialmedial{
-    margin-top: -20PX;
+    margin-top: 0PX;
     font-weight: 700;
 }
-
 @media screen and (max-width:1100px) {
-    .card{
-        width: 40%;
+    .footer{
+        width: 98%;
+    }
+    .card_body label{
+        font-size: 20px;
     }
     .line{
         background-color: #000000;
         width: 47%;
         padding: 1PX 1PX;
-    }
-  
- .footer{
-    width: 100%;
-    margin-left: 40px;
- }  
-}
-@media screen and (max-width:420px) {
-   
- .footer{
-    width: 50%;
-  margin-left: 20px;
-
- } 
-
-
-}
-
-
-
-
-@media screen and (max-width:620px) {
-    .card{
-        width: 80%;
-    }
-    .container{
-
-    width:100%;
-    }
-    .footer{
-        width: 100%;
-    }
-    .line{
-        width: 90%;
     }
 }
 .icon i{
@@ -345,8 +454,12 @@ font-weight: 700;
     margin-top: 20px;
 
 }
- .fa-linkedin{
+.fa-linkedin{
     color: white;
     font-size: 25px;
     margin-top: 20px;   
 }
+
+
+
+
