--- a/projects.css
+++ b/projects.css
@@ -1,4 +1,5 @@
 
+
 :root{
     --color-1:#228B22;
     
@@ -107,21 +108,6 @@
   .nav-toggler span::after{
       top: 6px;
   }
-  @media screen and (max-width:620px) {
-.rowp{
-    width: 70%;
-}
-.dow .p{
-    font-size: 15px;
-}
-.rowp p{
-    font-size: 60px;
-}
-.fa-cloud-download{
-    font-size: 15px;
-}
-  }
-  
   @media(max-width: 991px){
       .nav-toggler{
           display: flex;
@@ -129,7 +115,7 @@
   
       .nav{
         z-index: 1;
-        height: 800px;
+        height: 960px;
       }
       .header .nav{
           position: absolute;
@@ -165,164 +151,178 @@
       }
       
   }
-  .heads{
-    font-size: 30px;
-    font-weight: 800;
-    color: white;
-    text-align: center;
-    margin-bottom: 20px;
-  }
- 
- 
-.container{
-    max-width: 1600px;
-    margin: 50px auto;
-}
-  .rowp{
-  padding: 40px 40px;
- width: 50%;
-   height: 320px;
-    background-color:white;
-    margin-left: 0px;
-    border-radius: 10px;
-    margin-left: 400px;
-  }
-  .iconss{
-padding: 13px 5px;
-background-color:black;
-border-radius: 10px;
-color: white;
 
-  }
-  .dow .p{
-    font-size: 30px;
-    font-weight: 600;
-  }
 
-  .fa-cloud-download{
-    font-size: 15px;
-  }
-  .input1 input{
-    width: 100%;
-    border: none;
-   color:black;
-    outline: none;
-    border-bottom: 3px solid black;
-    margin-top: 20px;
-    background-color: white;
-   padding: 10px;
-   font-weight: 800;
-   font-size: 15px;
-  }
 
-  .input1 input::placeholder{
-  color: black;
-  font-weight: 700;
-  font-size: 20px;
-  }
-  .message{
-  
-    padding: 10px 10px;
-    background-color:black;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    font-size: 15px;
-    font-weight: 600;
-   
-  }
-  .line{
-    margin-bottom: 10px;
-    width: 100%;
-    height: 3px;
-    background-color: #000000;
-  }
-
-  @media screen and (max-width:1000px) {
-    .rowp{
-       
-        margin-left: 20px;
-    }
-  .iconns{
-width: 20%;
-padding: 100px 100px;
-  }
-   .rowp span{
-    font-size: 20px;
-   }
-}
-
-@media screen and (max-width:1000px) {
-    .rowp{
-        width: 100%;
-        margin-left: 120px;
-    }
-  
-   .rowp span{
-    font-size: 20px;
-   }
-}
-@media screen and (max-width:1200px) {
-    .rowp{
-        width: 70%;
-        margin: 20px auto;
-    }
-    
-    
-}
-@media screen and (max-width:820px) {
-    .rowp{
+    .container{
         width: 90%;
-        margin-left: 35px;
-        height: 310px;
+        margin: 50px auto;
+    }
+    .titledash{
+        margin-top: 0px;
+    }
+    .projects1{
+        color: #228B22;
+        text-align: center;
+        margin-top: 40px;
+        font-size: 30px;
+        font-weight: 900;
+    }
+  .title1{
+ 
+    font-weight: 900;
+    color: white;
+  }
+  
+    .card{
+    
+    width: 95%;
+    background-color:white;
+    border-radius: 1px solid #ccc;
+    margin-top: 0px;
+    transition: 0.3s;
+    border-radius: 10px;
+    }
+    .cardd{
+        width: 20%;
+        margin-top: -30px;
+        transition: 0.3s;
+        border-radius: 10px;
+        }
+    .header_cards{
+    font-size: 15px;
+    text-align: center;
+    background-color:white;
+   
+   
+    }
+    .explore{
+        background-color: #228B22;
+        padding: 10px 10px;
+        margin-top: 10px;
+        border-radius: 5px;
+        width: 50%;
+    }
+    .explore a{
+        color: white;
+    }
+   
+    .htl p:hover{
+      background-color: #228B22;
+      color: white;
+    }
+    .card_body img{
+width: 95%;
+margin-left: 8px;
+height: 180px;
 
     }
-    .icons{
-        font-weight: 600;
+    .header_cards i{
+font-size: 30px;
+font-weight: 500;
+margin-top: -30px;
+    }
+    .card{
+        height: 300px;
+        padding-top: 10px;
+        font-size: 15px;
+        
+    } 
+    .cardd{
+        height: 330px;
+        padding-top: 50px;
+        
         
     }
-    .fa-cloud-download{
-        font-size: 25px;
-    }
-    .input1 input::placeholder{
-        color: black;
-        font-weight: 700;
-        font-size: 25px;
-        }
-        .message{
-        font-size: 20px;
-        }
-}
-@media screen and (max-width:850px) {
-    .rowp{
-        width: 75%;
-    }
-}
-@media screen and (max-width:800px) {
-    .rowp{
-        width: 80%;
-        margin-left: 60px;
-        height: 350px;
-    }
-    .rowp span{
-        font-size: 10px;
-        font-weight: 900;
-       
-       }}
-       @media screen and (max-width:1250px) {
-        .rowp{
-            width: 90%;
-            margin-left: 40px;
-            height: 350px;
-        }
-       
-      
-  
-}
-@media(max-width: 720px){
-.rowp{
-    width: 90%;
-    margin-left: 20px;
-}
+    .blogs{
+        margin-bottom: 20px;
+        text-decoration: none;
+        background-color: #228B22;
+        width: 50%;
+        padding: 5px 5px;
+        border-radius: 10px;
+        margin-left: 50px;
 
-}
+    }
+    .blogs a{
+        text-decoration: none;
+        color: white;
+        padding-left: 3px;
+        font-size: 15px;
+        font-weight: 600;
+    }
+    .card_body .btn{
+        text-decoration: none;
+        font-size: 13px;
+        width: 100%;
+        background-color:#228B22;
+        padding: 20px 10px;
+        display: block;
+      text-align: center;
+     height: 80px;
+      color: white;
+    margin-top: 10px;
+    border-radius: 10px;
+    }
+    .card:hover{
+    
+        transform: scale(1);
+        box-shadow: 0 0 40px -10px rgb(103, 16, 16);
+    }
+    .row{
+        display: flex;
+        justify-content: space-around;
+        flex-flow: wrap;
+    }
+   
+
+  .htl p{
+    margin-left: 5px;
+    color: black;
+    font-weight: 600;
+  }
+    @media screen and (max-width:1000px) {
+        .card{
+            height: 350px;
+            width: 100%;
+         
+         
+        }
+        .title1{
+            margin-top: 100px;
+        }
+        .explore{
+            margin-top: 3px;
+        }
+        .cardd{
+            width: 43%;
+            margin-bottom: 90px;
+        }
+     
+     
+    }
+    @media screen and (max-width:1250px) {
+        .card{
+           height: 330px;
+        }
+    }
+    
+    @media screen and (max-width:620px) {
+        .card{
+            width: 100%;
+            margin-bottom: 120px;
+        }
+        .explore{
+margin-top: -110px;
+        }
+        .cardd{
+            width: 83%;
+            margin-bottom: 120px;
+        }
+        .container{
+    
+        width:100%;
+        }
+       
+    }
+    
