--- a/sign.css
+++ b/sign.css
@@ -62,7 +62,7 @@ body{
     .signup{
         position: absolute;
         width: 802px;
-        height: 250px;
+        height: 290px;
         left: 400px;
         top: 250px;
         
@@ -91,12 +91,13 @@ position: absolute;
     background-color: 
     #228B22;
     color: white;
-    left: 100px;
+    left: 0px;
     border-radius: 5px;
     font-size: 15px;
     font-family: sans-serif;
     font-weight: 600;
     border: none;
+    top: 140px;
 }
 
 span{
